# hdb-bto-chatbot

./: .gitignore  README.md  app.py  pyproject.toml
src/llm_model/: scraper.py
src/llm_model/conf/: config.yaml
